--- a/app/views/codes/index.html.erb
+++ b/app/views/codes/index.html.erb
@@ -3,21 +3,24 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Language</th>
-      <th>Ipaddress</th>
+      <th><em>#</em></th>
+      <th> | Name</th>
+      <th> | Language</th>
+      <th> | Ipaddress</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @codes.each do |code| %>
+    <% @codes.first(10).each do |code| %>
       <tr>
-        <td><%= code.name %></td>
-        <td><%= code.language %></td>
-        <td><%= code.ipaddress %></td>
-        <td><%= link_to 'Show', code %></td>
+        <td><%= @no %></td>
+        <td> | <%= code.name %></td>
+        <td> | <%= code.language %></td>
+        <td> | <%= code.ipaddress %></td>
+        <td> | <%= link_to 'Show', code %></td>
       </tr>
+    <% @no += 1 %>
     <% end %>
   </tbody>
 </table>
